change the main.java and input /output processing. Also modifie the Readme.md. Updated the SortedPQ to Heap structure for Djistra